--- a/extracted.bib
+++ b/extracted.bib
@@ -118,6 +118,56 @@
   doi =           {10.1086/376446},
 }
 
+@article{Sanchez-Contreras2018a,
+  author =        {{S{\'a}nchez Contreras}, C. and {Alcolea}, J. and
+                   {Castro-Carrizo}, A. and {Velilla-Prieto}, L. and
+                   {Santander-Garc{\'{\i}}a}, M. and
+                   {Quintana-Lacaci}, G. and {Cernicharo}, J.},
+  journal =       {ArXiv e-prints},
+  month =         sep,
+  title =         {{Through the magnifying glass: ALMA acute viewing of
+                   the intricate nebular architecture of OH231.8+4.2}},
+  year =          {2018},
+  abstract =      {We present continuum and molecular line emission ALMA
+                   observations of OH 231.8+4.2, a well studied bipolar
+                   nebula around an asymptotic giant branch (AGB) star.
+                   The high angular resolution (~0.2-0.3 arcsec) and
+                   sensitivity of our ALMA maps provide the most
+                   detailed and accurate description of the overall
+                   nebular structure and kinematics of this object to
+                   date. We have identified a number of outflow
+                   components previously unknown. Species studied in
+                   this work include 12CO, 13CO, CS, SO, SO2, OCS, SiO,
+                   SiS, H3O+, Na37Cl, and CH3OH. The molecules Na37Cl
+                   and CH3OH are first detections in OH 231.8+4.2, with
+                   CH3OH being also a first detection in an AGB star.
+                   Our ALMA maps bring to light the totally unexpected
+                   position of the mass-losing AGB star (QX Pup)
+                   relative to the large-scale outflow. QX Pup is
+                   enshrouded within a compact (<60 AU) parcel of dust
+                   and gas (clump S) in expansion (V~5-7 km/s) that is
+                   displaced by 0.6arcsec to the south of the dense
+                   equatorial region (or waist) where the bipolar lobes
+                   join. Our SiO maps disclose a compact bipolar outflow
+                   that emerges from QX Pup's vicinity. This outflow is
+                   oriented similarly to the large-scale nebula but the
+                   expansion velocities are about ten times lower (~35
+                   km/s). We deduce short kinematical ages for the SiO
+                   outflow, ranging from ~50-80 yr, in regions within
+                   ~150 AU, to ~400-500 yr at the lobe tips (~3500 AU).
+                   Adjacent to the SiO outflow, we identify a
+                   small-scale hourglass-shaped structure
+                   (mini-hourglass) that is probably made of compressed
+                   ambient material formed as the SiO outflow penetrates
+                   the dense, central regions of the nebula. The lobes
+                   and the equatorial waist of the mini-hourglass are
+                   both radially expanding with a constant velocity
+                   gradient. The mini-waist is characterized by
+                   extremely low velocities, down to ~1 km/s at ~150 AU,
+                   which tentatively suggest the presence of a stable
+                   structure. (abridged)},
+}
+
 @article{Caris2004a,
   author =        {{Caris}, M. and {Lewen}, F. and
                    {M{\"u}ller}, H.~S.~P. and {Winnewisser}, G.},
@@ -515,6 +565,36 @@
                    available in electronic form at http://www.aanda.org},
   doi =           {10.1051/0004-6361/201218963},
   eid =           {A48},
+}
+
+@article{Chiang1997a,
+  author =        {{Chiang}, E.~I. and {Goldreich}, P.},
+  journal =       {\apj},
+  month =         nov,
+  pages =         {368-376},
+  title =         {{Spectral Energy Distributions of T Tauri Stars with
+                   Passive Circumstellar Disks}},
+  volume =        {490},
+  year =          {1997},
+  abstract =      {We derive hydrostatic, radiative equilibrium models
+                   for passive disks surrounding T Tauri stars. Each
+                   disk is encased by an optically thin layer of
+                   superheated dust grains. This layer reemits directly
+                   to space about half the stellar energy it absorbs.
+                   The other half is emitted inward and regulates the
+                   interior temperature of the disk. The heated disk
+                   flares. As a consequence, it absorbs more stellar
+                   radiation, especially at large radii, than a flat
+                   disk would. The portion of the spectral energy
+                   distribution contributed by the disk is fairly flat
+                   throughout the thermal infrared. At fixed frequency,
+                   the contribution from the surface layer exceeds that
+                   from the interior by about a factor 3 and is emitted
+                   at more than an order of magnitude greater radius.
+                   Spectral features from dust grains in the superheated
+                   layer appear in emission if the disk is viewed nearly
+                   face-on.},
+  doi =           {10.1086/304869},
 }
 
 @article{Testi2010a,
