--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -46,7 +46,7 @@ we ought to cite you somewhere, if not here}
 
 Disks around forming high-mass stars have been resolved only a handful of
 times.  The disk around Orion Source I (\sourcei) has frequently been observed
-\citep{Hirota2014a,Plambeck2016a,Ginsburg2018a}, but most molecular species
+\citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}, but most molecular species
 detected trace either an outflow (e.g., SiO) or some combination of the outflow
 and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
 $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
@@ -186,7 +186,7 @@ an expanding shell (IRC+10216).
 % IK Tauri, VY Canis Majoris \citep{Milam2007a}
 
 In \sourcei, the emission comes from the surface layers of the disk.
-\citet{Ginsburg2018a} showed that these species come only from the disk's
+\citet{Ginsburg2018b} showed that these species come only from the disk's
 immediate surroundings, unlike SiO and \water, which exhibit high vertical
 extents consistent with outflow.  They modeled the NaCl emission profile
 as a truncated Keplerian disk, finding an inner cutoff $\approx$35-40 AU
