--- a/extracted.bib
+++ b/extracted.bib
@@ -372,59 +372,39 @@
   eid =           {219},
 }
 
-@article{Ginsburg2018a,
-  author =        {{Ginsburg}, A. and {Bally}, J. and {Barnes}, A. and
-                   {Bastian}, N. and {Battersby}, C. and {Beuther}, H. and
-                   {Brogan}, C. and {Contreras}, Y. and {Corby}, J. and
-                   {Darling}, J. and {De Pree}, C. and
-                   {Galv{\'a}n-Madrid}, R. and {Garay}, G. and
-                   {Henshaw}, J. and {Hunter}, T. and
-                   {Kruijssen}, J.~M.~D. and {Longmore}, S. and {Lu}, X. and
-                   {Meng}, F. and {Mills}, E.~A.~C. and {Ott}, J. and
-                   {Pineda}, J.~E. and {S{\'a}nchez-Monge}, {\'A}. and
-                   {Schilke}, P. and {Schmiedeke}, A. and {Walker}, D. and
-                   {Wilner}, D.},
+@article{Ginsburg2018b,
+  author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
+                   {Plambeck}, R. and {Wright}, M.},
   journal =       {\apj},
-  month =         feb,
-  pages =         {171},
-  title =         {{Distributed Star Formation throughout the Galactic
-                   Center Cloud Sgr B2}},
-  volume =        {853},
+  month =         jun,
+  pages =         {119},
+  title =         {{A Keplerian Disk around Orion SrCI,
+                   a{\nbsp}{\sim}{\nbsp}15 M $_{&sun;}$ YSO}},
+  volume =        {860},
   year =          {2018},
-  abstract =      {We report ALMA observations with resolution ≈0."5
-                   at 3 mm of the extended Sgr B2 cloud in the Central
-                   Molecular Zone (CMZ). We detect 271 compact sources,
-                   most of which are smaller than 5000 au. By ruling out
-                   alternative possibilities, we conclude that these
-                   sources consist of a mix of hypercompact H II regions
-                   and young stellar objects (YSOs). Most of the newly
-                   detected sources are YSOs with gas envelopes that,
-                   based on their luminosities, must contain objects
-                   with stellar masses {M}* ≳ 8 {M}o . Their spatial
-                   distribution spread over a ~12 × 3 pc region
-                   demonstrates that Sgr B2 is experiencing an extended
-                   star formation event, not just an isolated
-                   ``starburst'' within the protocluster regions. Using
-                   this new sample, we examine star formation thresholds
-                   and surface density relations in Sgr B2. While all of
-                   the YSOs reside in regions of high column density
-                   (N({{{H}}}2)≳ 2× {10}23 {{cm}}-2), not all regions
-                   of high column density contain YSOs. The observed
-                   column density threshold for star formation is
-                   substantially higher than that in solar vicinity
-                   clouds, implying either that high-mass star formation
-                   requires a higher column density or that any star
-                   formation threshold in the CMZ must be higher than in
-                   nearby clouds. The relation between the surface
-                   density of gas and stars is incompatible with
-                   extrapolations from local clouds, and instead stellar
-                   densities in Sgr B2 follow a linear {{{Sigma }}}*
-                   {--}{{{Sigma }}}{gas} relation, shallower than that
-                   observed in local clouds. Together, these points
-                   suggest that a higher volume density threshold is
-                   required to explain star formation in CMZ clouds.},
-  doi =           {10.3847/1538-4357/aaa6d4},
-  eid =           {171},
+  abstract =      {We report ALMA long-baseline observations of Orion
+                   Source I (SrcI), with a resolution 0."03--0."06
+                   (12--24 au) at 1.3 and 3.2 mm. We detect both
+                   continuum and spectral line emission from SrcI's
+                   disk. We also detect a central weakly resolved source
+                   that we interpret as a hot spot in the inner disk,
+                   which may indicate the presence of a binary system.
+                   The high angular resolution and sensitivity of these
+                   observations allows us to measure the outer envelope
+                   of the rotation curve of the H2O 55,0--64,3 line,
+                   which gives a mass M I ≈ 15 $\pm$ 2 {M}o . We
+                   detected several other lines that more closely trace
+                   the disk, but were unable to identify their parent
+                   species. Using centroid-of-channel methods on these
+                   other lines, we infer a similar mass. These
+                   measurements solidify SrcI as a genuine high-mass
+                   protostar system and support the theory that SrcI and
+                   the Becklin-Neugebauer Object were ejected from the
+                   dynamical decay of a multiple-star system ~500 years
+                   ago, an event that also launched the explosive
+                   molecular outflow in Orion.},
+  doi =           {10.3847/1538-4357/aac205},
+  eid =           {119},
 }
 
 @article{Girart2017a,
@@ -465,41 +445,6 @@
                    low-angular resolution observations, and therefore
                    indicating youth (MM2) or the presence of a less
                    massive object (WMC).},
-}
-
-@article{Ginsburg2018b,
-  author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
-                   {Plambeck}, R. and {Wright}, M.},
-  journal =       {\apj},
-  month =         jun,
-  pages =         {119},
-  title =         {{A Keplerian Disk around Orion SrCI,
-                   a{\nbsp}{\sim}{\nbsp}15 M $_{&sun;}$ YSO}},
-  volume =        {860},
-  year =          {2018},
-  abstract =      {We report ALMA long-baseline observations of Orion
-                   Source I (SrcI), with a resolution 0."03--0."06
-                   (12--24 au) at 1.3 and 3.2 mm. We detect both
-                   continuum and spectral line emission from SrcI's
-                   disk. We also detect a central weakly resolved source
-                   that we interpret as a hot spot in the inner disk,
-                   which may indicate the presence of a binary system.
-                   The high angular resolution and sensitivity of these
-                   observations allows us to measure the outer envelope
-                   of the rotation curve of the H2O 55,0--64,3 line,
-                   which gives a mass M I ≈ 15 $\pm$ 2 {M}o . We
-                   detected several other lines that more closely trace
-                   the disk, but were unable to identify their parent
-                   species. Using centroid-of-channel methods on these
-                   other lines, we infer a similar mass. These
-                   measurements solidify SrcI as a genuine high-mass
-                   protostar system and support the theory that SrcI and
-                   the Becklin-Neugebauer Object were ejected from the
-                   dynamical decay of a multiple-star system ~500 years
-                   ago, an event that also launched the explosive
-                   molecular outflow in Orion.},
-  doi =           {10.3847/1538-4357/aac205},
-  eid =           {119},
 }
 
 @article{Agundez2012a,
@@ -595,6 +540,57 @@
                    layer appear in emission if the disk is viewed nearly
                    face-on.},
   doi =           {10.1086/304869},
+}
+
+@article{Plambeck2013a,
+  author =        {{Plambeck}, R.~L. and {Bolatto}, A.~D. and
+                   {Carpenter}, J.~M. and {Eisner}, J.~A. and
+                   {Lamb}, J.~W. and {Leitch}, E.~M. and
+                   {Marrone}, D.~P. and {Muchovej}, S.~J. and
+                   {P{\'e}rez}, L.~M. and {Pound}, M.~W. and
+                   {Teuben}, P.~J. and {Volgenau}, N.~H. and
+                   {Woody}, D.~P. and {Wright}, M.~C.~H. and
+                   {Zauderer}, B.~A.},
+  journal =       {\apj},
+  month =         mar,
+  pages =         {40},
+  title =         {{The Ionized Circumstellar Envelopes of Orion Source
+                   I and the Becklin-Neugebauer Object}},
+  volume =        {765},
+  year =          {2013},
+  abstract =      {The 229 GHz (lambda1.3 mm) radio emission from
+                   Orion-KL was mapped with up to 0.''14 angular
+                   resolution with CARMA, allowing measurements of the
+                   flux densities of Source I ("SrcI") and the
+                   Becklin-Neugebauer Object (BN), the two most massive
+                   stars in this region. We find integrated flux
+                   densities of 310 $\pm$ 45 mJy for SrcI and 240 $\pm$
+                   35 mJy for BN. SrcI is optically thick even at 229
+                   GHz. No trace of the H30alpha recombination line is
+                   seen in its spectrum, although the v 2 = 1,
+                   5(5,0)-6(4,3) transition of H2O, 3450 K above the
+                   ground state, is prominent. SrcI is elongated at
+                   position angle 140$\,^{\circ}$, as in 43 GHz images.
+                   These results are most easily reconciled with models
+                   in which the radio emission from SrcI arises via the
+                   H- free-free opacity in a T < 4500 K disk, as
+                   considered by Reid et al. By contrast, the radio
+                   spectrum of BN is consistent with p +/e - free-free
+                   emission from a dense (ne ~ 5 × 107 cm-3), but
+                   otherwise conventional, hypercompact H II region. The
+                   source is becoming optically thin at 229 GHz, and the
+                   H30alpha recombination line, at V LSR = 23.2 $\pm$
+                   0.5 km s-1, is prominent in its spectrum. A Lyman
+                   continuum flux of 5 × 1045 photons s-1, consistent
+                   with that expected from a B star, is required to
+                   maintain the ionization. Supplementary 90 GHz
+                   observations were made to measure the H41alpha and
+                   H42alpha recombination lines toward BN. Published 43
+                   and 86 GHz data suggest that SrcI brightened with
+                   respect to BN over the 15 year period from 1994 to
+                   2009.},
+  doi =           {10.1088/0004-637X/765/1/40},
+  eid =           {40},
 }
 
 @article{Testi2010a,
