add new figures

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -209,6 +209,25 @@ are consistent with the observed continuum brightness temperatures in the outer
 part of the continuum disk, though temperatures in the inner portion of that
 disk reach $\sim500$ K.
 
+\begin{figure*}[!htp]
+\includegraphics[scale=1,width=2.25in]{figures/OrionSourceI_NaClv=3_7-6_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours.pdf}
+\includegraphics[scale=1,width=2.25in]{figures/OrionSourceI_NaClv=1_18-17_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours.pdf}
+\includegraphics[scale=1,width=2.25in]{figures/OrionSourceI_NaClv=2_26-25_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours.pdf}
+\caption{Peak intensity images of NaCl lines in each band to show the spatial
+distribution of the emission.  From left to right, the lines are: 87.26 GHz
+NaCl v=3 J=7-6, 232.51 GHz NaCl v=1 J=18-17, and 333.01 GHz NaCl v=2 J=26-25.
+These are the brightest uncontaminated lines in each of their observing bands.
+The red contours show the Band 6 226 GHz continuum at levels of 50, 300, and 500 K.
+White contours are shown at 50, 100, and 150 K.
+The red and blue ellipses show the beams for the continuum and the line emission,
+respectively.  The beam sizes are
+$0.10 \arcsec \times 0.08 \arcsec$, PA $40.6 \degrees$,
+$0.043 \arcsec \times 0.034 \arcsec$, PA $-87.4 \degrees$, and
+$0.029 \arcsec \times 0.022 \arcsec$, PA $-54.6 \degrees$, respectively.
+}
+\label{fig:}
+\end{figure*}
+
 % This estimate provides the expected temperature of
 % gas at the surface of a passive disk in this radius range. {\color{red}We could
 % obtain more realistic temperature estimates using the \citet{Chiang1997a}
